spacing issues on homepage

--- a/less/front-page.less
+++ b/less/front-page.less
@@ -145,7 +145,7 @@
 
 .carousel-cell {
 	width: 33%;
-  height: 220px;
+  height: 240px;
   margin-right: 10px;
   counter-increment: gallery-cell;
   border-right: 2px dotted #999999;
@@ -162,12 +162,14 @@
 
 @media (max-width: 900px) { 
   width: 50%;
+  height: 270px;
  }
 
 
 
   @media (max-width: @screen-xs-min) { 
   width: 100%;
+  height: 220px;
  }
 
 	}
