--- a/style.dev.css
+++ b/style.dev.css
@@ -1368,7 +1368,7 @@ ul.uwaa-social li a:focus.email {
 }
 .home-high .carousel-cell {
   width: 33%;
-  height: 220px;
+  height: 240px;
   margin-right: 10px;
   counter-increment: gallery-cell;
   border-right: 2px dotted #999999;
@@ -1384,11 +1384,13 @@ ul.uwaa-social li a:focus.email {
 @media (max-width: 900px) {
   .home-high .carousel-cell {
     width: 50%;
+    height: 270px;
   }
 }
 @media (max-width: 480px) {
   .home-high .carousel-cell {
     width: 100%;
+    height: 220px;
   }
 }
 .copy-block {
